--- a/package.json
+++ b/package.json
@@ -9,23 +9,42 @@
     "@chakra-ui/portal": "^2.0.15",
     "@chakra-ui/system": "^2.3.5",
     "@chakra-ui/tooltip": "^2.2.6",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/material": "^5.15.0",
+    "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "3.35.5",
+    "axios": "^1.6.2",
+    "crypto-random-string": "^5.0.0",
+    "formik": "^2.4.5",
     "framer-motion": "^7.10.2",
+    "i": "^0.3.7",
+    "i18next": "^23.7.11",
+    "lodash-es": "^4.17.21",
+    "mapbox-gl": "^3.0.1",
+    "npm": "^10.2.5",
     "react": "^18.2.0",
     "react-apexcharts": "1.4.0",
     "react-calendar": "^3.9.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "react-icons": "^4.4.0",
+    "react-map-gl": "^7.1.7",
+    "react-quill": "^2.0.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "redux": "^5.0.0",
+    "socket.io-client": "^4.7.2",
     "tailwindcss-rtl": "^0.9.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "websocket": "^1.0.34",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
