--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "horizon-ui-tailwind-react",
   "version": "1.0.0",
   "private": true,
+  "proxy": "http://localhost:3001",
+  "homepage": ".",
   "dependencies": {
     "@chakra-ui/hooks": "^2.1.4",
     "@chakra-ui/modal": "^2.2.9",
@@ -31,14 +33,17 @@
     "react-apexcharts": "1.4.0",
     "react-calendar": "^3.9.0",
     "react-dom": "^18.2.0",
+    "react-easy-infinite-scroll-hook": "^2.1.4",
     "react-i18next": "^13.5.0",
     "react-icons": "^4.4.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-map-gl": "^7.1.7",
     "react-quill": "^2.0.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.4.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
+    "react-virtualized": "^9.22.5",
     "redux": "^5.0.0",
     "socket.io-client": "^4.7.2",
     "tailwindcss-rtl": "^0.9.0",
@@ -76,6 +81,7 @@
     "postcss": "^8.4.16",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.1",
+    "react-socket-io": "^0.2.5",
     "tailwindcss": "^3.1.8"
   }
 }
